--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -26,6 +26,13 @@
               %span.caret
             %ul.dropdown-menu{role: "menu"}
               %li= link_to "Source", "https://github.com/batedurgonnadie/speedrunracing", target: :_blank
+        .col-md-3.col-xs-12
+          %form.navbar-form{role: "search", action: "/search"}
+            .input-group
+              = text_field_tag :q, params[:q].present? ? params[:q] : nil, placeholder: "Search", class: "form-control"
+              .input-group-btn
+                %button.btn.btn-default{type: "submit"}
+                  %i.glyphicon.glyphicon-search
         %ul.nav.navbar-nav.navbar-right
           - if user_signed_in?
             - if current_user.in_active_race? && (live_path = race_path(current_user.active_races.first)) != request.path
@@ -44,4 +51,3 @@
           - else
             %li= link_to "Sign In", new_user_session_path
             %li= link_to "Sign Up", new_user_registration_path
-
