--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -26,7 +26,7 @@
               %span.caret
             %ul.dropdown-menu{role: "menu"}
               %li= link_to "Source", "https://github.com/batedurgonnadie/speedrunracing", target: :_blank
-        .col-md-3.col-xs-12
+        .col-sm-3.col-xs-12
           %form.navbar-form{role: "search", action: "/search"}
             .input-group
               = text_field_tag :q, params[:q].present? ? params[:q] : nil, placeholder: "Search", class: "form-control"
