--- a/app/views/search/search.haml
+++ b/app/views/search/search.haml
@@ -1,39 +1,41 @@
 = provide(:title, 'Search')
-.col-md-6.col-sm-12
-  - if @games.empty?
-    %h3.center No games found ;-;
-  - else
-    .panel.panel-default
-      .panel-heading Races
-      %table.panel-body.table.table-striped.table-hover
-        %thead
-          %tr
-            %th Cover
-            %th Name
-            %th Shortname
-            %th # of Races
-        %tbody
-          - @games.each do |game|
-            %tr
-              %td
-                %img{src: game.cover_small}
-              %td= link_to game.name, game_path(game)
-              %td= game.shortname
-              %td= game.completed_races_count
+.row
+  .col-lg-6.col-md-12
+    - if @games.empty?
+      %h3.text-center No games found ;-;
+    - else
+      .card
+        .card-header Races
+        .card-body.table-responsive
+          %table.table.table-striped.table-hover
+            %thead
+              %tr
+                %th Cover
+                %th Name
+                %th Shortname
+                %th # of Races
+            %tbody
+              - @games.each do |game|
+                %tr
+                  %td
+                    %img{src: game.cover_small}
+                  %td= link_to game.name, game_path(game)
+                  %td= game.shortname
+                  %td= game.completed_races_count
 
-.col-md-6.col-sm-12
-  - if @users.empty?
-    %h3.center No users found ;-;
-  - else
-    .panel.panel-default
-      .panel-heading Users
-      %table.panel-body.table.table-striped.table-hover
-        %thead
-          %tr
-            %th Display Name
-            %th # of Races
-        %tbody
-          - @users.each do |user|
+  .col-lg-6.col-md-12
+    - if @users.empty?
+      %h3.text-center No users found ;-;
+    - else
+      .card
+        .card-header Users
+        %table.card-body.table.table-responsive.table-striped.table-hover
+          %thead
             %tr
-              %td= link_to user.display_name, user_public_profile_path(user)
-              %td= user.races.count
+              %th Display Name
+              %th # of Races
+          %tbody
+            - @users.each do |user|
+              %tr
+                %td= link_to user.display_name, user_public_profile_path(user)
+                %td= user.races.count
