--- a/app/views/devise/passwords/edit.haml
+++ b/app/views/devise/passwords/edit.haml
@@ -1,7 +1,7 @@
 %h2 Change Your Password
 
 .row
-  .col-md-offset-3.col-md-6.col-md-offset-3
+  .col-lg-offset-3.col-lg-6.col-lg-offset-3
     = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
       = devise_error_messages!
       = f.hidden_field :reset_password_token
@@ -17,6 +17,6 @@
         = f.password_field :password_confirmation, autocomplete: "off", class: "form-control"
 
       .form-group
-        = f.submit "Change my password", class: "btn btn-default"
+        = f.submit "Change my password", class: "btn btn-primary"
 
     = render "devise/shared/links"
