--- a/app/views/devise/passwords/new.haml
+++ b/app/views/devise/passwords/new.haml
@@ -1,7 +1,7 @@
 %h2 Forgot Your Password?
 
 .row
-  .col-md-offset-3.col-md-6.col-md-offset-3
+  .col-lg-offset-3.col-lg-6.col-lg-offset-3
     = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
       = devise_error_messages!
 
@@ -10,6 +10,6 @@
         = f.email_field :email, autofocus: true, class: "form-control"
 
       .form-group
-        = f.submit "Send me reset password instructions", class: "btn btn-default"
+        = f.submit "Send me reset password instructions", class: "btn btn-primary"
 
     = render "devise/shared/links"
