--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -1,7 +1,7 @@
 %h2 Sign up
 
 .row
-  .col-md-offset-3.col-md-6.col-md-offset-3
+  .col-lg-offset-3.col-lg-6.col-lg-offset-3
     = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = devise_error_messages!
 
@@ -24,6 +24,6 @@
         = f.password_field :password_confirmation, autocomplete: "off", class: "form-control"
 
       .form-group
-        = f.submit "Sign Up", class: "btn btn-default"
+        = f.submit "Sign Up", class: "btn btn-primary"
 
     = render "devise/shared/links"
