--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -1,21 +1,22 @@
 = provide(:title, "Search for Games")
 
-.panel.panel-default
-  .panel-heading Games
-  %table.panel-body.table.table-striped.table-hover
-    %thead
-      %tr
-        %th Cover
-        %th Name
-        %th Shortname
-        %th # of Races
-    %tbody
-      - @games.each do |game|
+.card
+  .card-header Games
+  .card-body.table-responsive
+    %table.table.table-striped.table-hover
+      %thead
         %tr
-          %td
-            %img{src: game.cover_small}
-          %td= link_to game.name, game_path(game)
-          %td= game.shortname
-          %td= game.completed_races_count
-  .center
-    = paginate @games, theme: 'twitter-bootstrap-3'
+          %th Cover
+          %th Name
+          %th Shortname
+          %th # of Races
+      %tbody
+        - @games.each do |game|
+          %tr
+            %td
+              %img{src: game.cover_small}
+            %td= link_to game.name, game_path(game)
+            %td= game.shortname
+            %td= game.completed_races_count
+  .mx-auto.mb-3
+    = paginate @games, theme: 'twitter-bootstrap-4'
