--- a/app/views/races/completed.haml
+++ b/app/views/races/completed.haml
@@ -1,6 +1,6 @@
 = provide(:title, 'Completed Races')
-.center
+.text-center
   = paginate @races
 = render partial: 'shared/race_table', locals: race_table_locals(:completed_races, @races)
-.center
+.text-center
   = paginate @races
