--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,11 +1,12 @@
 !!!
 %html
   %head
-    %meta{content: "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
-    %title= yield(:title) || "SpeedRunRacing!"
-    = stylesheet_link_tag "application.css"
-    = javascript_include_tag "application.js", async: Rails.env.production?, defer: Rails.env.production?
+    %meta{content: 'text/html; charset=UTF-8', 'http-equiv' => 'Content-Type'}/
+    %meta{name: 'viewport', content: 'width=device-width, initial-scale=1'}
+    %title= yield(:title) || 'SpeedRunRacing!'
+    = stylesheet_link_tag 'application.css'
+    = javascript_include_tag 'application.js', defer: Rails.env.production?
+    = javascript_pack_tag 'application.js', defer: Rails.env.production?
     = csrf_meta_tags
     = render partial: 'shared/favicons'
     = content_for(:html_head)
