--- a/app/views/shared/_alerts.haml
+++ b/app/views/shared/_alerts.haml
@@ -1,7 +1,7 @@
-- types = %w(success info warning danger notice alert)
+- types = %w[success info warning danger notice alert].freeze
 - flash.each do |key, value|
   - next unless types.include?(key)
-  %div{class: "alert alert-#{key} alert-dismissible fade in", role: "alert"}
+  %div{class: "alert alert-#{key} alert-dismissible fade show", role: "alert"}
     %button{type: "button", class: "close", "data-dismiss" => "alert", "aria-label" => "Close"}
       %span{"aria-hidden" => "true"} &times;
     = value
