--- a/app/views/shared/_favicons.haml
+++ b/app/views/shared/_favicons.haml
@@ -9,8 +9,9 @@
 %link{rel: "apple-touch-icon", sizes: "152x152", href: "/favicons/apple-touch-icon-152x152.png"}
 %link{rel: "apple-touch-icon", sizes: "180x180", href: "/favicons/apple-touch-icon-180x180.png"}
 %link{rel: "icon", type: "image/png", href: "/favicons/favicon-32x32.png", sizes:"32x32"}
+%link{rel: "icon", type: "image/png", href: "/favicons/android-chrome-144x144.png", sizes:"144x144"}
 %link{rel: "icon", type: "image/png", href: "/favicons/android-chrome-192x192.png", sizes:"192x192"}
-%link{rel: "icon", type: "image/png", href: "/favicons/favicon-96x96.png", sizes:"96x96"}
+%link{rel: "icon", type: "image/png", href: "/favicons/android-chrome-256x256.png", sizes:"256x256"}
 %link{rel: "icon", type: "image/png", href: "/favicons/favicon-16x16.png", sizes:"16x16"}
 %link{rel: "manifest", href: "/favicons/manifest.json"}
 %link{rel: "mask-icon", href: "/favicons/safari-pinned-tab.svg", color: "#5bbad5"}
