use strings for all api serializers to indicate non-numeric
In the event this ever wants to be changed, if it is assumed to be a string starting now then it will be easier to change later

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,7 +6,7 @@
     %title= yield(:title) || 'SpeedRunRacing!'
     = stylesheet_link_tag 'application.css'
     = javascript_include_tag 'application.js', defer: Rails.env.production?
-    = javascript_pack_tag 'application.js', defer: Rails.env.production?
+    // = javascript_pack_tag 'application.js', defer: Rails.env.production?
     = csrf_meta_tags
     = render partial: 'shared/favicons'
     = content_for(:html_head)
