shorten abandon button so it doesn't break out of layout

--- a/app/views/shared/_race_buttons.haml
+++ b/app/views/shared/_race_buttons.haml
@@ -12,7 +12,7 @@
     Join Race
   %button.btn.btn-danger.btn-part-race{class: part_class}
     Part Race
-  %button.btn.btn-danger.btn-abandon-race{class: abandon_class} Abandon Race
+  %button.btn.btn-danger.btn-abandon-race{class: abandon_class} Abandon
   %button.btn.btn-danger.btn-rejoin-race{class: rejoin_class} Rejoin
 .col-lg-2.col-sm-6
   %button.btn.btn-success.btn-ready-race{class: ready_class, disabled: !current_entrant.present?}
