--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -20,7 +20,7 @@
               %a.nav-link.dropdown-toggle{href: "#", data: {toggle: "dropdown"}}
                 Misc
               %ul.dropdown-menu{role: "menu"}
-                %li.dropdown-item= link_to "Source", "https://github.com/batedurgonnadie/speedrunracing", target: :_blank, class: 'nav-link'
+                %li.dropdown-item= link_to "Source Code", "https://github.com/batedurgonnadie/speedrunracing", target: :_blank, class: 'nav-link'
             .ml-lg-3
               %form.form-inline{role: "search", action: "/search"}
                 .input-group
