Add race creator to races, plug cancancan into AC,
You can no longer create multiple races if you have created a race that isn't started.  You can now enter a race though after finishing the current race if it hasn't completely ended (only you finished).  Also fixes category tabs on the games show page.

--- a/app/views/applications/new.haml
+++ b/app/views/applications/new.haml
@@ -18,6 +18,7 @@
               .row
                 .col-lg-8
                   = f.text_field(:redirect_uri, class: 'form-control', placeholder: 'Redirect URI (include http:// or https://)')
+                .col-lg-4
                   If you haven't created a page for Splits I/O to redirect users back to yet, put "debug" here.
 
             %p
