Introduce inactive race closing, fix deleting races on all FF
Use redis for dev so that jobs that perform in delayed job actually send to the client, use DJ for some background jobs, switch some jobs to "perform_now" to use the async adapter because they should be ran immediately, fix live race link in header, formatting changes to games show page, and hopefully make delayed job runner work in elasticbeanstalk

--- a/app/views/games/show.haml
+++ b/app/views/games/show.haml
@@ -14,7 +14,10 @@
         - options = {description: "#{c.name} Races", id: "#{c.name}-race-table"}
         .tab-pane.fade{id: "c#{c.id}", class: "#{i==0 ? 'active show' : ''}", role: 'tabpanel'}
           - if current_user.present?
-            %h3
+            %h3.center
               %button{'class' => 'btn btn-primary btn-create-race', 'data-category' => "#{c.id}"}
                 = "Create Race for #{c.name}"
-          = render partial: 'shared/race_table', locals: race_table_locals(:category_races, c.races.completed.newest, options)
+          - if c.races.completed.newest.count.positive?
+            = render partial: 'shared/race_table', locals: race_table_locals(:category_races, c.races.completed.newest, options)
+          - else
+            %h5.center No races for this category yet, be the first to run it!
