--- a/app/views/races/show.haml
+++ b/app/views/races/show.haml
@@ -18,32 +18,9 @@
           %span#race-duration.format-time{class: @race.in_progress? ? "updating-time" : "", data: {start_time: iso_time_string(@race.start_time)}}
             = @race.started? ? @race.duration : "0:00"
 
-  .col-lg-4.col-xs-12.float-right
+  .col-lg-4.col-xs-12.float-right.mb-3
     #entrants-list
-      .card
-        .card-header.text-center.dropdown-toggle{data: {toggle: "collapse", target: '#entrants-table'}}
-          Entrants List
-        - show_list = @race.entrants.count <= 5 || @race.finished?
-        #entrants-table.collapse{class: show_list ? 'show' : ''}
-          %table.card-body.table.table-hover.text-center.mb-0.w-100
-            %thead
-              %tr
-                %th Entrant
-                %th Ready?
-                %th Time
-                %th Place
-            %tbody
-              - @race.sorted_entrants.each do |e|
-                %tr{'id' => "entrant-id-#{e.id}", 'data-entrant-id' => e.id}
-                  %td.name-column
-                    = e.user.display_name
-                  %td.ready-column
-                    %i.glyphicon{class: e.ready ? 'fas fa-check text-success' : 'fas fa-times text-danger'}
-                  %td.time-column
-                    .format-time>
-                      = e.completed? ? e.duration : '-'
-                  %td.place-column
-                    .format-place>= e.place.present? ? e.place : '-'
+      = render partial: 'races/entrants_table', locals: {race: @race}
 
   .col-lg-8.col-xs-12.float-left
     #chat-box
@@ -64,3 +41,8 @@
           = text_field_tag "message-input-box", nil, class: "form-control", placeholder: placeholder, disabled: disabled, autocomplete: 'off'
         %span
           = submit_tag "Send", class: "btn btn-primary", id: "btn-message-send", disabled: disabled
+
+  - if @race.creator?(current_user) && !@race.started?
+    .col-lg-4.col-xs-12.float-right
+      #creator-controls
+        = render partial: 'races/admin_table', locals: {race: @race}
