--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,8 +5,7 @@
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1'}
     %title= yield(:title) || 'SpeedRunRacing!'
     = stylesheet_link_tag 'application.css'
-    = javascript_include_tag 'application.js', defer: Rails.env.production?
-    // = javascript_pack_tag 'application.js', defer: Rails.env.production?
+    = javascript_pack_tag 'application.js'
     = csrf_meta_tags
     = render partial: 'shared/favicons'
     = content_for(:html_head)
