Remove a db call because we already iterate over the array later on
update readme for clarification

--- a/app/views/races/index.haml
+++ b/app/views/races/index.haml
@@ -1,5 +1,5 @@
 = provide(:title, 'SpeedRunRacing!')
-- if @races.empty?
+- if @races.blank?
   %h4 There seems to be no races going on right now, why not create one!
   Races can be created from the games page so head on over to your favorite games page.
 - else
