make search super inefficeint, create games api endpoints, ...
enable trigram module for search, add tests for the new endpoint, update some old tests after finding some errors

--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -17,6 +17,6 @@
               %img{src: game.cover_small}
             %td= link_to game.name, game_path(game)
             %td= game.shortname
-            %td= game.completed_races_count
+            %td= game.completed_races.count
   .mx-auto.mb-3
     = paginate @games, theme: 'twitter-bootstrap-4'
