--- a/app/views/search/index.haml
+++ b/app/views/search/index.haml
@@ -1,41 +1,55 @@
 = provide(:title, 'Search')
-.row
-  .col-lg-6.col-md-12
-    - if @games.empty?
-      %h3.text-center No games found ;-;
-    - else
-      .card
-        .card-header Races
-        .card-body.table-responsive
-          %table.table.table-striped.table-hover
-            %thead
-              %tr
-                %th Cover
-                %th Name
-                %th Shortname
-                %th # of Races
-            %tbody
-              - @games.each do |game|
-                %tr
-                  %td
-                    %img{src: game.cover_small}
-                  %td= link_to game.name, game_path(game)
-                  %td= game.shortname
-                  %td= game.completed_races.count
+- no_games_and_users = @games.empty? && @users.any?
 
-  .col-lg-6.col-md-12
-    - if @users.empty?
-      %h3.text-center No users found ;-;
-    - else
-      .card
-        .card-header Users
-        %table.card-body.table.table-responsive.table-striped.table-hover
-          %thead
-            %tr
-              %th Display Name
-              %th # of Races
-          %tbody
-            - @users.each do |user|
-              %tr
-                %td= link_to user.display_name, user_public_profile_path(user)
-                %td= user.races.count
+%ul.nav.nav-tabs.mb-3{id: 'searchTabs', role: 'tablist'}
+  %li.nav-item
+    %a.nav-link#games-tab{href: '#games', role: 'tab', class: no_games_and_users ? '' : 'active show', data: {toggle: 'tab'}} Games
+  %li.nav-item
+    %a.nav-link#users-tab{href: '#users', role: 'tab', class: no_games_and_users ? 'active show' : '', data: {toggle: 'tab'}} Users
+
+.tab-content#searchTabsContent
+  .tab-pane.fade#games{role: 'tabpanel', class: no_games_and_users ? '' : 'show active'}
+    .row
+      .col
+        - if @games.empty?
+          %h3.text-center No games found ;-;
+        - else
+          .card
+            .card-header Races
+            .card-body.table-responsive
+              %table.table.table-striped.table-hover
+                %thead
+                  %tr
+                    %th Cover
+                    %th Name
+                    %th Shortname
+                    %th # of Races
+                    %th # of Active Races
+                %tbody
+                  - @games.each do |game|
+                    %tr
+                      %td
+                        %img{src: game.cover_small}
+                      %td= link_to game.name, game_path(game)
+                      %td= game.shortname
+                      %td= game.races.completed.count
+                      %td= game.races.active.count
+
+  .tab-pane.fade#users{role: 'tabpanel', class: no_games_and_users ? 'show active' : ''}
+    .row
+      .col
+        - if @users.empty?
+          %h3.text-center No users found ;-;
+        - else
+          .card
+            .card-header Users
+            %table.card-body.table.table-responsive.table-striped.table-hover
+              %thead
+                %tr
+                  %th Display Name
+                  %th # of Races
+              %tbody
+                - @users.each do |user|
+                  %tr
+                    %td= link_to user.display_name, user_public_profile_path(user)
+                    %td= user.races.count
