add discord to header

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -21,6 +21,9 @@
                 Misc
               %ul.dropdown-menu{role: "menu"}
                 %li.dropdown-item
+                  %a.nav-link{href: 'https://discord.gg/pznsHQV', target: '_blank'}
+                    = icon('fab', 'discord', 'Discord')
+                %li.dropdown-item
                   %a.nav-link{href: 'https://github.com/batedurgonnadie/speedrunracing', target: '_blank'}
                     = icon('fab', 'github', 'Source Code')
             .ml-lg-3
