have games show page show non-completed races

--- a/app/views/shared/_race_table.haml
+++ b/app/views/shared/_race_table.haml
@@ -37,4 +37,7 @@
                 - else
                   = "-"
             - if cols.include?(:finished)
-              %td.time-since-column.format-past= iso_time_string(race.start_time)
+              - if race.finished?
+                %td.time-since-column.format-past= iso_time_string(race.start_time)
+              - else
+                %td.time-since-column= race.status_text
