--- a/app/views/games/show.haml
+++ b/app/views/games/show.haml
@@ -17,7 +17,7 @@
             %h3.center
               %button{'class' => 'btn btn-primary btn-create-race', 'data-category' => "#{c.id}"}
                 = "Create Race for #{c.name}"
-          - if c.races.completed.newest.count.positive?
-            = render partial: 'shared/race_table', locals: race_table_locals(:category_races, c.races.completed.newest, options)
+          - if c.races.newest.count.positive?
+            = render partial: 'shared/race_table', locals: race_table_locals(:category_races, c.races.newest, options)
           - else
             %h5.center No races for this category yet, be the first to run it!
