change background color slightly and adjust spacing

--- a/app/views/games/show.haml
+++ b/app/views/games/show.haml
@@ -1,5 +1,5 @@
 = provide(:title, @game.name)
-.row
+.row.mb-3
   %h2.col-lg-9= "#{@game.name} (#{@game.shortname})"
   %img.col-lg-3{src: @game.cover_large}
 
