--- a/app/views/shared/_race_table.haml
+++ b/app/views/shared/_race_table.haml
@@ -1,7 +1,7 @@
 .card
   .card-header= description
   .card-body.table-responsive
-    %table.table.table-striped.table-hover{id: id}
+    %table.table.table-striped.table-hover.mb-0{id: id}
       %thead
         %tr
           - if cols.include?(:cover)
