Fix back/forward bug and adjust colors

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -1,6 +1,6 @@
 %body
   %header
-    %nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.mb-4
+    %nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.mb-4#main-nav
       .container
         %a.navbar-brand{href: root_path}
           %span SpeedRunRacing
