--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,5 +43,9 @@ footer {
 }
 
 body {
-    background-color: #0E0E0E;
+    background-color: #1C1C1C;
+}
+
+#main-nav {
+    background-color: #212121;
 }
